--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <!--<link rel="stylesheet" href="css/motors.css">-->
-<title>Placeholder WDD330</title>
+<title>Portfolio WDD330</title>
 </head>
 <body>
 <h1>WDD-330 Examples</h1>
@@ -12,7 +12,7 @@
 
 Topic Links
 <ul>
-<li>topic 1</li>
+<li><a href="./calculator.html">Lissa's Fancy Calculator</a></li>
 <li>topic 2</li>
 <li>topic 3</li>
 <li>topic 4</li>
